@@ -1,5 +1,5 @@
 name: Towny
-version: 0.137
+version: 0.138
 language: english
 author: ElgarL
 website: 'http://townyadvanced.github.io/'
@@ -1590,8 +1590,13 @@ town1_has_merged_with_town2: '&6The town %s has agreed to merge together with th
 #Shown in the town and nation status screens to inform about neutrality costs.
 status_neutrality_cost: 'Neutrality Cost:'
 
-msg_ptw_warning_1: 'If you have paid any real-life money for these townblocks please understand: the server you play on is in violation of the Minecraft EULA and the Towny license.'
-msg_ptw_warning_2: 'The Towny team never intended for townblocks to be purchaseable with real money.'
-msg_ptw_warning_3: 'If you did pay real money you should consider playing on a Towny server that respects the wishes of the Towny Team.'
+#Added in 0.138
 
-you_have_been_invited_to_join3: 'You have been invited to join &b%s&9 (Nation: &3%s&9)'
+#Line 1 of the givebonus warning.
+msg_ptw_warning_1: 'If you have paid any real-life money for these townblocks please understand: the server you play on is in violation of the Minecraft EULA and the Towny license.'
+#Line 2 of the givebonus warning.
+msg_ptw_warning_2: 'The Towny team never intended for townblocks to be purchaseable with real money.'
+#Line 3 of the givebonus warning.
+msg_ptw_warning_3: 'If you did pay real money you should consider playing on a Towny server that respects the wishes of the Towny Team.'
+#Message shown when a town invites a player to join, and that town has a nation.
+you_have_been_invited_to_join3: 'You have been invited to join %s&9 (Nation: %s&9)'
